--- a/.github/workflows/cdn.yml
+++ b/.github/workflows/cdn.yml
@@ -7,14 +7,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.5
       uses: actions/setup-python@v1
       with:
         python-version: 3.5
     - name: Install Dependencies
       run: |
         pip install b2
-        apt update && apt install -y curl
+        sudo apt update && sudo apt install -y curl
     - name: Upload Files
       env:
         CF_EMAIL: ${{ secrets.CF_EMAIL }}
