test minify action

--- a/.github/workflows/cdn.yml
+++ b/.github/workflows/cdn.yml
@@ -1,4 +1,4 @@
-name: NaaT CDN
+name: NAAT CDN
 
 on: [push]
 
@@ -15,6 +15,13 @@ jobs:
       run: |
         pip install b2
         sudo apt update && sudo apt install -y curl
+    - name: Minify CSS
+      run: |
+        wget https://github.com/tdewolff/minify/releases/download/v2.5.2/minify_2.5.2_linux_amd64.tar.gz -O min.tar.gz
+        tar -xzf min.tar.gz
+        mkdir min
+        minify -r -o min/ css
+        ls -l min
     - name: Upload Files
       env:
         CF_EMAIL: ${{ secrets.CF_EMAIL }}
