--- a/.github/workflows/cdn.yml
+++ b/.github/workflows/cdn.yml
@@ -21,7 +21,6 @@ jobs:
         tar -xzf min.tar.gz
         mkdir min
         ./minify -r -o min/ css
-        ls -l min
     - name: Upload Files
       env:
         CF_EMAIL: ${{ secrets.CF_EMAIL }}
@@ -31,8 +30,8 @@ jobs:
         B2_SECRET: ${{ secrets.B2_SECRET }}
       run: |
         b2 authorize_account $B2_ID $B2_SECRET
-        b2 upload_file notanotheranimetheme css/scsl.css scsl.css
-        b2 upload_file notanotheranimetheme css/dcsl.css dcsl.css
-        b2 upload_file notanotheranimetheme css/tcsl.css tcsl.css
-        b2 upload_file notanotheranimetheme css/qcsl.css qcsl.css
+        b2 upload_file notanotheranimetheme min/scsl.css scsl.css
+        b2 upload_file notanotheranimetheme min/dcsl.css dcsl.css
+        b2 upload_file notanotheranimetheme min/tcsl.css tcsl.css
+        b2 upload_file notanotheranimetheme min/qcsl.css qcsl.css
         curl -X POST "https://api.cloudflare.com/client/v4/zones/$CF_ZONE/purge_cache" -H "X-Auth-Email: $CF_EMAIL" -H "X-Auth-Key: $CF_SECRET" -H "Content-Type: application/json" --data '{"files":["https://cdn.discordthemes.net/file/notanotheranimetheme/scsl.css", "https://cdn.discordthemes.net/file/notanotheranimetheme/dcsl.css", "https://cdn.discordthemes.net/file/notanotheranimetheme/tcsl.css", "https://cdn.discordthemes.net/file/notanotheranimetheme/qcsl.css"]}'
