--- a/powercord_manifest.json
+++ b/powercord_manifest.json
@@ -4,5 +4,5 @@
   "version" : "3.2",
   "author" : "puckzxz#2080",
   "theme" : "NotAnotherAnimeTheme.theme.css",
-  "license" : "Unlicense License"
+  "license" : "Unlicense"
 }
